add exp 1a to main text

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -107,11 +107,11 @@
   {}{\typeout{Failed to patch abstract.}}
 \makeatother
 \shorttitle{Positivity as spontaneous self-referential processing}
-\author{Hu Chuan-Peng\textsuperscript{1,2}, Kaiping Peng\textsuperscript{1}, \& Jie Sui\textsuperscript{1,3}}
+\author{Hu Chuan-Peng\textsuperscript{1,2}, Kaiping Peng\textsuperscript{3}, \& Jie Sui\textsuperscript{3,4}}
 \affiliation{
 \vspace{0.5cm}
-\textsuperscript{1} Tsinghua University, 100084 Beijing, China\\\textsuperscript{2} Leibniz Institute for Resilience Research, 55131 Mainz, Germany\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
-\authornote{Hu Chuan-Peng, Department of Psychology, Tsinghua University, 100084 Beijing, China.
+\textsuperscript{1} TBA\\\textsuperscript{2} Leibniz Institute for Resilience Research, 55131 Mainz, Germany\\\textsuperscript{3} Tsinghua University, 100084 Beijing, China\\\textsuperscript{4} University of Aberdeen, Aberdeen, Scotland}
+\authornote{Hu Chuan-Peng, Leibniz Institute for Resilience Research (LIR).
 Kaiping Peng, Department of Psychology, Tsinghua University, 100084 Beijing, China.
 Jie Sui, School of Psychology, University of Aberdeen, Aberdeen, Scotland.
 
@@ -162,19 +162,207 @@ Yakushijin, ReikoJacobs, Robert A (2020), Are People Successful at Learning Sequ
 
 Schooler, L. J., Shiffrin, R. M., \& Raaijmakers, J. G. W. (2001). A Bayesian model for implicit effects in perceptual identification. Psychological Review, 108(1), 257--272. \url{https://doi.org/10.1037/0033-295X.108.1.257}
 
-\hypertarget{general-methods}{%
-\section{General Methods}\label{general-methods}}
+We reported results from eleven experiments. In first set of experiments, we found that shapes associated with morally positive person label were responded faster and more accurately. In the second set of experiment, we explore the potential role of good self in perceptual matching task and added one more independent variable, we found that the effect was mainly on good self. In the third part we tested whether the morality will automatically binds with person-relevance. Finally, we explore the correlation between behavioral task and questionnaire scores.
 
-\hypertarget{participants.}{%
-\subsection{Participants.}\label{participants.}}
+\hypertarget{disclosures}{%
+\section{Disclosures}\label{disclosures}}
 
-Most experiments (1a \textasciitilde{} 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from two experiments (experiment 7a, 7b) that were reported in Hu, Lan, Macrae, and Sui (2020) (See Table 1 for overview of these experiments).
+We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis. To have a better overview of the effect reported in this series experiment, we reported the synthesized results in the main text and individual experiment in supplementary materials.
+
+All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from two experiments (experiment 7a, 7b) that were reported in Hu, Lan, Macrae, and Sui (2020) (See Table S1 for overview of these experiments).
+
 All participant received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Tsinghua University.
+
+\hypertarget{part-1-moral-valence-effect}{%
+\section{Part 1: Moral valence effect}\label{part-1-moral-valence-effect}}
+
+In this part, we report five experiments that aimed at testing whether the instantly acquired association between shapes and good person would be prioritized in perceptual decision-making.
+
+\hypertarget{experiment-1a}{%
+\subsection{Experiment 1a}\label{experiment-1a}}
+
+\hypertarget{methods}{%
+\subsubsection{Methods}\label{methods}}
+
+\hypertarget{participants}{%
+\paragraph{Participants}\label{participants}}
+
+57 college students (38 female, age = 20.75 \(\pm\) 2.54 years) participated. 39 of them were recruited from Tsinghua University community in 2014; 18 were recruited from Wenzhou University in 2017. All participants were right-handed except one, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committees. 6 participant's data were excluded from analysis because nearly random level of accuracy, leaving 51 participants (34 female, age = 20.72 \(\pm\) 2.44 years).
+
+\hypertarget{stimuli-and-tasks}{%
+\paragraph{Stimuli and Tasks}\label{stimuli-and-tasks}}
+
+Three geometric shapes were used in this experiment: triangle, square, and circle. These shapes were paired with three labels (bad person, good person or neutral person). The pairs were counterbalanced across participants.
+
+\hypertarget{procedure}{%
+\paragraph{Procedure}\label{procedure}}
+
+This experiment had two phases. First, there was a brief learning stage. Participants were asked to learn the relationship between geometric shapes (triangle, square, and circle) and different person (bad person, a good person, or a neutral person). For example, a participant was told, \enquote{bad person is a circle; good person is a triangle; and a neutral person is represented by a square.} After participant remember the associations (usually in a few minutes), participants started a practicing phase of matching task which has the exact task as in the experimental task.
+In the experimental task, participants judged whether shape--label pairs, which were subsequently presented, were correct. Each trial started with the presentation of a central fixation cross for 500 ms. Subsequently, a pairing of a shape and label (good person, bad person, and neutral person) was presented for 100 ms. The pair presented could confirm to the verbal instruction for each pairing given in the training stage, or it could be a recombination of a shape with a different label, with the shape--label pairings being generated at random. The next frame showed a blank for 1100ms. Participants were expected to judge whether the shape was correctly assigned to the person by pressing one of the two response buttons as quickly and accurately as possible within this timeframe (to encourage immediate responding). Feedback (correct or incorrect) was given on the screen for 500 ms at the end of each trial, if no response detected, \enquote{too slow} was presented to remind participants to accelerate. Participants were informed of their overall accuracy at the end of each block. The practice phase finished and the experimental task began after the overall performance of accuracy during practice phase achieved 60\%.
+For participants from the Tsinghua community, they completed 6 experimental blocks of 60 trials. Thus, there were 60 trials in each condition (bad-person match, bad-person nonmatch, good-person match, good-person nonmatch, neutral-person match, and neutral-person nonmatch). For the participants from Wenzhou University, they finished 6 blocks of 120 trials, therefore, 120 trials for each condition.
+
+\hypertarget{data-analysis}{%
+\paragraph{Data analysis}\label{data-analysis}}
+
+We analyzed accuracy performance using a signal detection theory approach. The performance in each match condition was combined with that in the nonmatch condition with the same shape to form a measure of \(d'\), the match trials were regarded as signal while the nonmatch trials were regarded as noise (Sui, He, \& Humphreys, 2012). Given that the match and nonmatch trials are presented in the same way and had same number of trials across all studies, we assume that participants' inner distribution of these two types of trials had equal variance but may had different means. That is, we used the equal variance Gaussian SDT model (EVSDT) here (Rouder \& Lu, 2005). \textbf{Trials without response were excluded from the analysis.}
+
+We analyzed the \emph{d} prime and reaction times using the generalized linear model (GLM). The GLM approach didn't assume a particular generative model of the data but using linear model to fit the data. We applied the traditional repeated measures ANOVA, which is a special case of GLM. We also reported results from Bayesian generalized linear model approach.
+
+We also analyzed the accuracy and reaction times data using the drift-diffusion model (DDM), which combine the accuracy and reaction times together.
+
+\hypertarget{classic-nhst}{%
+\subparagraph{Classic NHST}\label{classic-nhst}}
+
+In the classic NHST approach, we've used the maximum likelihood estimate of the EVSDT parameters (mainly, the sensitivity \(d'\)) separately for each participant in the each experiment condition (Hu et al., 2020; Sui et al., 2012), and then used the parameter of each condition from each participant as dependent variable for repeated measures ANOVA. The \(d'\) is calculated as the difference of the standardized hit and false alarm rats (Stanislaw \& Todorov, 1999):
+\[ d' = zHR - zFAR = \Phi^{-1}(HR) - \Phi^{-1}(FAR) \]
+where the \(HR\) means hit rate and the \(FAR\) mean false alarm rate. \(zHR\) and \(zFAR\) are the standardized hit rate and false alarm rates, respectively. These two \(z\)-scores were converted from proportion (i.e., hit rate or false alarm rate) by inverse cumulative normal density function, \(\Phi^{-1}\) (\(\Phi\) is the cumulative normal density function, and is used convert \(z\) score into probabilities). Another parameter of signal detection theory, response criterion \(c\), is defined by the negative standardized false alarm rate (DeCarlo, 1998): \(-zFAR\).
+
+For the RTs, we used mean RTs of the accurate trials of each condition and subject for repeated measures ANOVA.
+
+The repeated measure ANOVA was done by \texttt{afex} package.
+
+\hypertarget{bayesian-hierarchical-generalized-linear-model-glm}{%
+\subparagraph{Bayesian hierarchical generalized linear model (GLM)}\label{bayesian-hierarchical-generalized-linear-model-glm}}
+
+The maximum likelihood estimate of parameters of EVSDT may ignored the uncertainty in estimates of the parameters (Rouder \& Lu, 2005). Bayesian generalized linear model (GLM) can help to estimate the uncertainty of parameters. We used BRMs (Bürkner, 2017; Carpenter et al., 2017) to model the data.
+
+In the GLM model, we assume that the outcome of each trial is Bernoulli distributed (binomial with 1 trial), with probability \(p_{i}\) that \(y_{i} = 1\).
+
+\[ y_{i} \sim Bernoulli(p_{i})\]
+In the perceptual matching task, the probability \(p_{i}\) can then be modeled as a function of the trial type:
+
+\[ \Phi(p_{i}) =  \beta_{0} + \beta_{1}IsMatch_{i}\]
+The outcomes \(y_{i}\) are 0 if the participant responded \enquote{nonmatch} on trial \(i\), 1 if they responded \enquote{match}. The probability of the \enquote{match} response for trial \(i\) for a participant is \(p_{i}\). We then write the generalized linear model on the probits (z-scores; \(\Phi\), \enquote{Phi}) of \(p\)s. \(\Phi\) is the cumulative normal density function and maps \(z\) scores to probabilities. Given this parameterization, the intercept of the model (\(\beta_0\)) is the standardized false alarm rate (probability of saying 1 when predictor is 0), which we take as our criterion \(c\). The slope of the model (\(\beta_1\)) is the increase of saying 1 when predictor is 1, in \(z\)-scores, which is another expression of \(d'\). Therefore, \(c\) = -\(z\)HR = \(-\beta_0\), and \(d' = \beta_1\).
+
+In each experiment, we had multiple participants, then we need also consider the variations between subjects, i.e., a hierarchical mode in which individual's parameter and the the population level parameter are estimated simultaneously. We assume that the outcome of each trial is Bernoulli distributed (binomial with 1 trial), with probability \(p_{ij}\) that \(y_{ij} = 1\).
+
+\[ y_{ij} \sim Bernoulli(p_{ij})\]
+Similarly, the generalized linear model was extended to two levels:
+\[ \Phi(p_{ij}) =  \beta_{0j} + \beta_{1j}IsMatch_{ij}\]
+The outcomes \(y_{ij}\) are 0 if participant \(j\) responded \enquote{nonmatch} on trial \(i\), 1 if they responded \enquote{match}. The probability of the \enquote{match} response for trial \(i\) for subject \(j\) is \(p_{ij}\). We again can write the generalized linear model on the probits (z-scores; \(\Phi\), \enquote{Phi}) of \(p\)s.
+
+The subjective-specific intercepts (\(\beta_{0} = -zFAR\)) and slopes (\(\beta_{1} = d'\)) are describe by multivariate normal with means and a covariance matrix for the parameters.
+\[ \begin{bmatrix}\beta_{0j}\\
+\beta_{1j}\\
+\end{bmatrix} \sim N(\begin{bmatrix}\theta_{0}\\
+\theta_{1}\\
+\end{bmatrix}, \sum) \]
+
+In the same vein, when trying to estimate the parameter across different experiments, we can further consider the participant is nested in different experiments, and each experiment, because of its variation in stimuli or stimuli presentation, may have different intercepts and slopes. In this case, we can use a nested hierarchical model to model all the experiment with similar design:
+\[y_{ijk} \sim Bernoulli(p_{ijk})\]
+where
+\[ \Phi(p_{ijk}) =  \beta_{0jk} + \beta_{1jk}IsMatch_{ijk}\]
+The outcomes \(y_{ijk}\) are 0 if participant \(j\) in experiment k responded \enquote{nonmatch} on trial \(i\), 1 if they responded \enquote{match}.
+
+\[\begin{bmatrix}\beta_{0jk}\\
+\beta_{1jk}\\
+\end{bmatrix} \sim N(\begin{bmatrix}\theta_{0k}\\
+\theta_{1k}\\
+\end{bmatrix}, \sum)\]
+
+and the experiment level parameter \(mu_{0k}\) and \(mu_{1k}\) is from a higher order distribution:
+
+\[\begin{bmatrix}\theta_{0k}\\
+\theta_{1k}\\
+\end{bmatrix} \sim N(\begin{bmatrix}\mu_{0}\\
+\mu_{1}\\
+\end{bmatrix}, \sum)\]
+in which \(\mu_{0}\) and \(\mu_{1}\) means the population level parameter.
+
+Using the Bayesian hierarchical model, we can directly estimate the over-all effect of valence on \(d'\) across all experiments with similar experimental design, instead of using a two-step approach where we first estimate the \(d'\) for each participant and then use a random effect model meta-analysis (Goh, Hall, \& Rosenthal, 2016).
+
+For the reaction time, there are many criticism about using the mean RTs as the representation of each participant (Rousselet \& Wilcox, 2019), to better capture a representative parameter for RTs, we used the log normal distribution (\url{https://lindeloev.github.io/shiny-rt/\#34_(shifted)_log-normal}). This distribution has two parameters: \(\mu\), \(\sigma\). \(\mu\) is the mean of the logNormal distribution, and \(\sigma\) is the disperse of the distribution. The log normal distribution can be extended to shifted log normal distribution, with one more parameter: shift, which is the earliest possible response.
+
+\[y_{i} = \beta_{0} + \beta_{1}*IsMatch_{i} * Valence_{i}\]
+
+Shifted log-normal distribution:
+\[ log(y_{ij}) \sim N(\mu_{j}, \sigma_{j})\]
+\(y_{ij}\) is the RT of the \(i\)th trial of the \(j\)th participants.
+
+\[\mu_{j} \sim N(\mu, \sigma)\]
+
+\[\sigma_{j} \sim Cauchy()\]
+
+This model can be easily expand to three-level model in which participants and experiments are two group level variable and participants were nested in the experiments.
+\[ log(y_{ijk}) \sim N(\mu_{jk}, \sigma_{jk})\]
+
+\(y_{ijk}\) is the RT of the \(i\)th trial of the \(j\)th participants in the \(k\)th experiment.
+
+\[\mu_{jk} \sim N(\mu_{k}, \sigma_{k})\]
+
+\[\sigma_{jk} \sim Cauchy()\]
+
+\[\theta_{jk} \sim Cauchy()\]
+
+\[\mu_{k} \sim N(\mu, \sigma)\]
+
+\hypertarget{hierarchical-drift-diffusion-model-hddm}{%
+\subparagraph{Hierarchical drift diffusion model (HDDM)}\label{hierarchical-drift-diffusion-model-hddm}}
+
+To further explore the psychological mechanism under perceptual decision-making, we used HDDM (Wiecki, Sofer, \& Frank, 2013) to model our RTs and accuracy data. We used the prior implemented in HDDM, that is, informative priors that constrains parameter estimates to be in the range of plausible values based on past literature (Matzke \& Wagenmakers, 2009)
+
+\hypertarget{results}{%
+\subsubsection{Results}\label{results}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/ex1a-dprime-rt-1.pdf}
+\caption{\label{fig:ex1a-dprime-rt}RT and \emph{d} prime of Experiment 1a.}
+\end{figure}
+
+\hypertarget{classic-analytical-approach}{%
+\paragraph{Classic analytical approach}\label{classic-analytical-approach}}
+
+\hypertarget{d-prime}{%
+\subparagraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime}}
+
+Figure \ref{fig:ex1a-dprime-rt} shows \emph{d} prime and reaction times during the perceptual matching task. We conducted a single factor (valence: good, neutral, bad) repeated measure ANOVA.
+
+We found the effect of Valence (\(F(1.96, 97.84) = 6.19\), \(\mathit{MSE} = 0.27\), \(p = .003\), \(\hat{\eta}^2_G = .020\)). The post-hoc comparison with multiple comparison correction revealed that the shapes associated with Good-person (2.11, SE = 0.14) has greater \emph{d} prime than shapes associated with Bad-person (1.75, SE = 0.14), \emph{t}(50) = 3.304, \emph{p} = 0.0049. The Good-person condition was also greater than the Neutral-person condition (1.95, SE = 0.16), but didn't reach statistical significant, \emph{t}(50) = 1.54, \emph{p} = 0.28. Neither the Neutral-person condition is significantly greater than the Bad-person condition, \emph{t}(50) = 2.109, \emph{p} = .098.
+
+\hypertarget{reaction-times}{%
+\subparagraph{Reaction times}\label{reaction-times}}
+
+We conducted 2 (Matchness: match v. nonmatch) by 3 (Valence: good, neutral, bad) repeated measure ANOVA. We found the main effect of Matchness (\(F(1, 50) = 232.39\), \(\mathit{MSE} = 948.92\), \(p < .001\), \(\hat{\eta}^2_G = .104\)), main effect of valence (\(F(1.87, 93.31) = 9.62\), \(\mathit{MSE} = 1,673.86\), \(p < .001\), \(\hat{\eta}^2_G = .016\)), and interaction between Matchness and Valence (\(F(1.73, 86.65) = 8.52\), \(\mathit{MSE} = 1,441.75\), \(p = .001\), \(\hat{\eta}^2_G = .011\)).
+
+We then carried out two separate ANOVA for Match and Mismatched trials. For matched trials, we found the effect of valence . We further examined the effect of valence for both self and other for matched trials. We found that shapes associated with Good Person (684 ms, SE = 11.5) responded faster than Neutral (709 ms, SE = 11.5), \emph{t}(50) = -2.265, \emph{p} = 0.0702) and Bad Person (728 ms, SE = 11.7), \emph{t}(50) = -4.41, \emph{p} = 0.0002), and the Neutral condition was faster than the Bad condition, \emph{t}(50) = -2.495, \emph{p} = 0.0415). For non-matched trials, there was no significant effect of Valence ().
+
+\hypertarget{bayesian-hierarchical-glm}{%
+\paragraph{Bayesian hierarchical GLM}\label{bayesian-hierarchical-glm}}
+
+\hypertarget{d-prime-1}{%
+\subparagraph{d prime}\label{d-prime-1}}
+
+We fitted a Bayesian hierarchical GLM for signal detection theory approach. The results showed that when the shapes were tagged with labels with different moral valence, the sensitivity (\(d'\)) and criteria (\(c\)) were both influence. For the \(d'\), we found that the shapes tagged with morally good person (2.46, 95\% CI{[}2.21 2.72{]}) is greater than shapes tagged with moral bad (2.07, 95\% CI{[}1.83 2.32{]}), \(P_{PosteriorComparison} = 1\). Shape tagged with morally good person is also greater than shapes tagged with neutral person (2.23, 95\% CI{[}1.95 2.49{]}), \(P_{PosteriorComparison} = 0.97\). Also, the shapes tagged with neutral person is greater than shapes tagged with morally bad person, \(P_{PosteriorComparison} = 0.92\).
+
+Interesting, we also found the criteria for three conditions also differ, the shapes tagged with good person has the highest criteria (-1.01, {[}-1.14 -0.88{]}), followed by shapes tagged with neutral person(-1.06, {[}-1.21 -0.92{]}), and then the shapes tagged with bad person(-1.11, {[}-1.25 -0.97{]}). However, pair-wise comparison showed that only showed strong evidence for the difference between good and bad conditions.
+
+\hypertarget{reaction-times-1}{%
+\subparagraph{Reaction times}\label{reaction-times-1}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp1a-BGLM-1.pdf}
+\caption{\label{fig:plot-exp1a-BGLM}Exp1a: Results of Bayesian GLM analysis.}
+\end{figure}
+
+We fitted a Bayesian hierarchical GLM for RTs, with a log-normal distribution as the link function. We used the posterior distribution of the regression coefficient to make statistical inferences. As in previous studies, the matched conditions are much faster than the mismatched trials (\(P_{PosteriorComparison} = 1\)). We focused on matched trials only, and compared different conditions: Good is faster than the neutral, \(P_{PosteriorComparison} = .99\), it was also faster than the Bad condition, \(P_{PosteriorComparison} = 1\). And the neutral condition is faster than the bad condition, \(P_{PosteriorComparison} = .99\). However, the mismatched trials are largely overlapped. See Figure \ref{fig:plot-exp1a-BGLM}.
+
+\hypertarget{hddm}{%
+\paragraph{HDDM}\label{hddm}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp1a-HDDM-1.pdf}
+\caption{\label{fig:plot-exp1a-HDDM}Exp1a: Results of HDDM.}
+\end{figure}
+
+We fitted our data with HDDM, using the response-coding (See also, Hu et al., 2020). We estimated separate drift rate (\(v\)), non-decision time (\(T_{0}\)), and boundary separation (\(a\)) for each condition. We found that the shapes tagged with good person has higher drift rate and higher boundary separation than shapes tagged with both neutral and bad person. Also, the shapes tagged with neutral person has a higher drift rate than shapes tagged with bad person, but not for the boundary separation. Finally, we found that shapes tagged with bad person had longer non-decision time (see Figure \ref{fig:plot-exp1a-HDDM}).
 
 \hypertarget{design-and-procedure}{%
 \subsection{Design and Procedure}\label{design-and-procedure}}
 
-This series of experiments started to test the effect of instantly acquired moral valence on perceptual decision-making. For this purpose, we used the social associative learning paradigm (or tagging paradigm)(Sui, He, \& Humphreys, 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral valence (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
+This series of experiments started to test the effect of instantly acquired moral valence on perceptual decision-making. For this purpose, we used the social associative learning paradigm (or tagging paradigm)(Sui et al., 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral valence (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
 
 The experiment 1a, 1b, 1c, 2, and 6a shared a 2 (matching: match vs.~nonmatch) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. Experiment 1a was the first one of the whole series studies and 1b, 1c, and 2 were conducted to exclude the potential confounding factors. More specifically, experiment 1b used different Chinese words as label to test whether the effect only occurred with certain familiar words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different neutral names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
 
@@ -186,53 +374,10 @@ Finally, experiment 5 was design to test the specificity of the moral valence. W
 
 E-prime 2.0 was used for presenting stimuli and collecting behavioral responses, except that experiment 7a and 7b used Matlab Psychtoolbox (Brainard, 1997; Pelli, 1997). For participants recruited in Tsinghua University, they finished the experiment individually in a dim-lighted chamber, stimuli were presented on 22-inch CRT monitors and their head were fixed by a chin-rest brace. The distance between participants' eyes and the screen was about 60 cm. The visual angle of geometric shapes was about \(3.7^\circ × 3.7^\circ\), the fixation cross is of (\(0.8^\circ × 0.8^\circ\) of visual angle) at the center of the screen. The words were of \(3.6^\circ\) × \(1.6^\circ\) visual angle. The distance between the center of the shape or the word and the fixation cross was \(3.5^\circ\) of visual angle. For participants recruited in Wenzhou University, they finished the experiment in a group consisted of 3 \textasciitilde{} 12 participants in a dim-lighted testing room. Participants were required to finished the whole experiment independently. Also, they were instructed to start the experiment at the same time, so that the distraction between participants were minimized. The stimuli were presented on 19-inch CRT monitor. The visual angles are could not be exactly controlled because participants's chin were not fixed.
 
-In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the behavioral tasks. All the questionnaire data are open (see, dataset 4 in Liu et al., 2020). See Table 1 for a summary information about all the experiments reported here.
+In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the behavioral tasks. All the questionnaire data are open (see, dataset 4 in Liu et al., 2020). See Table S1 for a summary information about all the experiments.
 
-\begin{table}[tbp]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:Table1_exp_info}Information about all experiments.}
-
-\begin{tabular}{lllllllll}
-\toprule
-ExpID & \multicolumn{1}{c}{Year} & \multicolumn{1}{c}{Month} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{DV} & \multicolumn{1}{c}{Design} & \multicolumn{1}{c}{Self.ref} & \multicolumn{1}{c}{Valence} & \multicolumn{1}{c}{Presenting}\\
-\midrule
-Exp\_1a\_1 & 2014 & 4 & 38 (35) & behav & 3 * 2 & explicit & words & Simultaneously\\
-Exp\_1a\_2 & 2017 & 4 & 18 (16) & behav & 3 * 2 & explicit & words & Simultaneously\\
-Exp\_1b\_1 & 2014 & 10 & 39 (27) & behav & 3 * 2 & explicit & words & Simultaneously\\
-Exp\_1b\_2 & 2017 & 4 & 33 (25) & behav & 3 * 2 & explicit & words & Simultaneously\\
-Exp\_1c & 2014 & 10 & 23 (23) & behav & 3 * 2 & explicit & descriptions & Simultaneously\\
-Exp\_2 & 2014 & 5 & 35 (34) & behav & 3 * 2 & explicit & words & Sequentially\\
-Exp\_3a & 2014 & 11 & 38 (35) & behav & 3 * 2 * 2 & explicit & words & Simultaneously\\
-Exp\_3b & 2017 & 4 & 61 (56) & behav & 3 * 2 * 2 & explicit & words & Simultaneously\\
-Exp\_4a\_1 & 2015 & 6 & 32 (29) & behav & 3 * 2 * 2 & implicit & words & Simultaneously\\
-Exp\_4a\_2 & 2017 & 4 & 32 (30) & behav & 3 * 2 * 2 & implicit & words & Simultaneously\\
-Exp\_4b\_1 & 2015 & 10 & 34 (32) & behav & 3 * 2 * 2 & implicit & words & Simultaneously\\
-Exp\_4b\_2 & 2017 & 4 & 19 (13) & behav & 3 * 2 * 2 & implicit & words & Simultaneously\\
-Exp\_5 & 2016 & 1 & 43 (38) & behav & 3 * 2 * 4 & explicit & words & Simultaneously\\
-Exp\_6a & 2014 & 12 & 24 (24) & behav/EEG & 3 * 2 & explicit & words & Sequentially\\
-Exp\_6b & 2016 & 1 & 23 (22) & behav/EEG & 3 * 2 * 2 & explicit & words & Sequentially\\
-Exp\_7a & 2016 & 7 & 35 (29) & behav & 2 * 2 * 2 & explicit & words & Simultaneously\\
-Exp\_7b & 2018 & 5 & 46 (42) & behav & 2 * 2 * 2 & explicit & words & Simultaneously\\
-\bottomrule
-\addlinespace
-\end{tabular}
-
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} DV = dependent variables; Valence = how valence was manipulated; Shape \& Label = how shapes \& labels were presented.}
-\end{tablenotes}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
-
-\hypertarget{data-analysis}{%
-\subsection{Data analysis}\label{data-analysis}}
-
-We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis. To have a better overview of the effect reported in this series experiment, we reported the synthesized results in the main text and individual experiment in supplementary materials.
+\hypertarget{data-analysis-1}{%
+\subsection{Data analysis}\label{data-analysis-1}}
 
 \hypertarget{analysis-of-individual-study}{%
 \subsubsection{Analysis of individual study}\label{analysis-of-individual-study}}
@@ -245,14 +390,14 @@ Both signal detection theory analysis of accuracy and RTs were analyzed in Frequ
 
 In the Bayesian approach, we used \texttt{brms} (Bürkner, 2017; Carpenter et al., 2017) to implement the Bayesian hierarchical generalized linear model to estimate the effect of valence and self-referential. See supplementary materials for the results of each experiment's method and results.
 
-Finally, we also explored the psychological processes during the perceptual decision-making using the drift-diffusion model (DDM). We used HDDM (Wiecki, Sofer, \& Frank, 2013) for this purpose.
+Finally, we also explored the psychological processes during the perceptual decision-making using the drift-diffusion model (DDM). We used HDDM (Wiecki et al., 2013) for this purpose.
 
 \hypertarget{synthesized-results}{%
 \subsubsection{Synthesized results}\label{synthesized-results}}
 
 We reported the synthesized results from the experiments, because many of them shared the similar experimental design. We reported the results in five parts: valence effect, explicit interaction between valence and self-relevance, implicit interaction between valence and self-relevance, specificity of valence effect, and behavior-questionnaire correlation.
 
-For the first two parts, we reported the synthesized results from Frequestist's approach(mini-meta-analysis, Goh, Hall, \& Rosenthal, 2016). The mini meta-analyses were carried out by using \texttt{metafor} package (Viechtbauer, 2010). We first calculated the mean of \(d'\) and RT of each condition for each participant, then calculate the effect size (Cohen's \(d\) ) and variance of the effect size for all contrast we interested: Good v. Bad, Good v. Neutral, and Bad v. Neutral for the effect of valence, and self vs.~other for the effect of self-relevance. Cohen's \(d\) and its variance were estimated using the following formula (Cooper, Hedges, \& Valentine, 2009):
+For the first two parts, we reported the synthesized results from Frequestist's approach(mini-meta-analysis, Goh et al., 2016). The mini meta-analyses were carried out by using \texttt{metafor} package (Viechtbauer, 2010). We first calculated the mean of \(d'\) and RT of each condition for each participant, then calculate the effect size (Cohen's \(d\) ) and variance of the effect size for all contrast we interested: Good v. Bad, Good v. Neutral, and Bad v. Neutral for the effect of valence, and self vs.~other for the effect of self-relevance. Cohen's \(d\) and its variance were estimated using the following formula (Cooper, Hedges, \& Valentine, 2009):
 
 \[d = \frac {(M_{1} - M_{2})}{\sqrt {(sd_{1}^2 + sd_{2}^2) - 2rsd_{1}sd_{2}}}  \sqrt {2(1-r)}\]
 
@@ -297,8 +442,8 @@ The DDM analyses were finished by HDDM, as reported in Hu et al. (2020). That is
 
 We used Pearson correlation to quantify the correlation. For those correlation that is significant (\(p < 0.05\)), we further tested the robustness of the correlation using bootstrap by \texttt{BootES} package (Kirby \& Gerlanc, 2013). To avoid false positive, we further determined the threshold for signifcant by permutation. More specifically, for each pairs that initially with \(p < .05\), we randomly shuffle the participants data of each score and calculated the correlation between the shuffled vectors. After repeating this procedure for 5000 times, we choose arrange these 5000 correlation coefficients and use the 95\% percentile number as our threshold.
 
-\hypertarget{results}{%
-\section{Results}\label{results}}
+\hypertarget{results-1}{%
+\section{Results}\label{results-1}}
 
 \hypertarget{effect-of-moral-valence}{%
 \subsection{Effect of moral valence}\label{effect-of-moral-valence}}
@@ -439,6 +584,9 @@ Carpenter, B., Gelman, A., Hoffman, M. D., Lee, D., Goodrich, B., Betancourt, M.
 \leavevmode\hypertarget{ref-Cooper_2009_handbook}{}%
 Cooper, H., Hedges, L. V., \& Valentine, J. C. (2009). \emph{The handbook of research synthesis and meta-analysis} (2nd ed.). Book, New York: Sage.
 
+\leavevmode\hypertarget{ref-DeCarlo_1998}{}%
+DeCarlo, L. T. (1998). Signal detection theory and generalized linear models. \emph{Psychological Methods}, \emph{3}(2), 186--205. Journal Article. \url{https://doi.org/10.1037/1082-989X.3.2.186}
+
 \leavevmode\hypertarget{ref-Farell_1985}{}%
 Farell, B. (1985). "Same"--"different" judgments: A review of current controversies in perceptual comparisons. \emph{Psychological Bulletin}, \emph{98}(3), 419--456. Journal Article. \url{https://doi.org/10.1037/0033-2909.98.3.419}
 
@@ -460,14 +608,26 @@ Krueger, L. E. (1978). A theory of perceptual matching. \emph{Psychological Revi
 \leavevmode\hypertarget{ref-Liu_2020_JOPD}{}%
 Liu, Q., Wang, F., Yan, W., Peng, K., Sui, J., \& Hu, C.-P. (2020). Questionnaire data from the revision of a chinese version of free will and determinism plus scale. \emph{Journal of Open Psychology Data}, \emph{8}(1), 1. Journal Article. \url{https://doi.org/10.5334/jopd.49/}
 
+\leavevmode\hypertarget{ref-matzke_psychological_2009}{}%
+Matzke, D., \& Wagenmakers, E.-J. (2009). Psychological interpretation of the ex-gaussian and shifted wald parameters: A diffusion model analysis. \emph{Psychonomic Bulletin \& Review}, \emph{16}(5), 798--817. \url{https://doi.org/10.3758/PBR.16.5.798}
+
 \leavevmode\hypertarget{ref-Pelli_1997}{}%
 Pelli, D. G. (1997). The videotoolbox software for visual psychophysics: Transforming numbers into movies. \emph{Spatial Vision}, \emph{10}(4), 437--442. Journal Article.
+
+\leavevmode\hypertarget{ref-Rouder_2005_BHM_SDT}{}%
+Rouder, J. N., \& Lu, J. (2005). An introduction to bayesian hierarchical models with an application in the theory of signal detection. \emph{Psychonomic Bulletin \& Review}, \emph{12}(4), 573--604. Journal Article. \url{https://doi.org/10.3758/bf03196750}
+
+\leavevmode\hypertarget{ref-Rousselet_2019}{}%
+Rousselet, G. A., \& Wilcox, R. R. (2019). Reaction times and other skewed distributions: Problems with the mean and the median. \emph{Meta-Psychology}. preprint. \url{https://doi.org/10.1101/383935}
 
 \leavevmode\hypertarget{ref-Simmons_2013_life}{}%
 Simmons, J. P., Nelson, L. D., \& Simonsohn, U. (2013). Life after p-hacking. Conference Proceedings. \url{https://doi.org/10.2139/ssrn.2205186}
 
 \leavevmode\hypertarget{ref-Spruyt_de_Houwer_2017}{}%
 Spruyt, A., \& Houwer, J. D. (2017). On the automaticity of relational stimulus processing: The (extrinsic) relational simon task. \emph{PLoS One}, \emph{12}(10), e0186606. Journal Article. \url{https://doi.org/10.1371/journal.pone.0186606}
+
+\leavevmode\hypertarget{ref-Stanislaw_Todorov_1999}{}%
+Stanislaw, H., \& Todorov, N. (1999). Calculation of signal detection theory measures. \emph{Behavior Research Methods, Instruments, \& Computers}, \emph{31}(1), 137--149. Journal Article. \url{https://doi.org/10.3758/BF03207704}
 
 \leavevmode\hypertarget{ref-Sui_2012_JEPHPP}{}%
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. Journal Article. \url{https://doi.org/10.1037/a0029792}
